# PIM-Compiler

./: CMakeLists.txt  Makefile  README.md
include/Conversion/PIMToPNM/: PIMToPNM.h
include/Dialect/PNM/IR/: PNMOps.hpp
lib/Conversion/PIMToPNM/: PIMToPNM.cpp
pim-compiler/: CMakeLists.txt
test/: backend.sh  midend.sh
